--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "dotenv-webpack": "^8.1.0",
+    "vite": "^6.0.11",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
   }
