--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Chat_GPT based intro to programming fbla",
   "main": "index.js",
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "niels",
